--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install -r requirements.txt
 addons:
   sonarcloud:
-    organization: albenoit-github
+    organization: Lakuman-github
 # command to run tests
 script:
   - pytest --cov .
