Change the link to the .py programm

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ addons:
     organization: Lakuman-github
 # command to run tests
 script:
-  - pytest --cov .
+  - pytest --cov assignements/Session1/
   - sonar-scanner        
